// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DateFilter snapshot shows a warning for April 2017 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Date CFPB Received the complaint
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Date CFPB Received the complaint filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p />
  <div>
    <ul
      className="date-inputs"
    >
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-from"
        >
          From
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-from"
            max={2019-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value="1/1/2016"
          />
          <button
            className="a-btn a-btn__link"
            onClick={[Function]}
          >
            <svg
              className="cf-icon-svg"
              viewBox="0 0 718.9 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
              />
            </svg>
            <span
              className="u-visually-hidden"
            >
              Clear
            </span>
          </button>
        </div>
      </li>
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-through"
        >
          Through
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-through"
            max={2019-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value="1/1/2018"
          />
          <button
            className="a-btn a-btn__link"
            onClick={[Function]}
          >
            <svg
              className="cf-icon-svg"
              viewBox="0 0 718.9 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
              />
            </svg>
            <span
              className="u-visually-hidden"
            >
              Clear
            </span>
          </button>
        </div>
      </li>
    </ul>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm-49.7 234.6c0-27.6 22.4-50 50-50s50 22.4 50 50v328.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V339.8zm50 582.5c-39.6 0-71.7-32.1-71.7-71.7s32.1-71.7 71.7-71.7S572 811 572 850.6s-32.1 71.7-71.7 71.7z"
        />
      </svg>
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          In April 2017 we made changes to consumer complaint Product fields. This may result in discrepancies in the display of visualizations
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`component::DateFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Date CFPB Received the complaint
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Date CFPB Received the complaint filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p />
  <div>
    <ul
      className="date-inputs"
    >
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-from"
        >
          From
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-from"
            max={2015-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value="1/1/2016"
          />
          <button
            className="a-btn a-btn__link"
            onClick={[Function]}
          >
            <svg
              className="cf-icon-svg"
              viewBox="0 0 718.9 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
              />
            </svg>
            <span
              className="u-visually-hidden"
            >
              Clear
            </span>
          </button>
        </div>
      </li>
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-through"
        >
          Through
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-through"
            max={2015-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value="1/1/2000"
          />
          <button
            className="a-btn a-btn__link"
            onClick={[Function]}
          >
            <svg
              className="cf-icon-svg"
              viewBox="0 0 718.9 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
              />
            </svg>
            <span
              className="u-visually-hidden"
            >
              Clear
            </span>
          </button>
        </div>
      </li>
    </ul>
    <ul
      className="messages"
    >
      <li
        className="a-error-message"
        id="input-error_message-ordered"
        role="alert"
      >
        <span
          aria-hidden="true"
        >
          <svg
            className="cf-icon-svg cf-icon-delete-round"
            viewBox="0 0 1000 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
            />
          </svg>
        </span>
        'From' must be less than 'Through'
      </li>
      <li
        className="a-error-message"
        id="input-error_message-through"
        role="alert"
      >
        <span
          aria-hidden="true"
        >
          <svg
            className="cf-icon-svg cf-icon-delete-round"
            viewBox="0 0 1000 1200"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
            />
          </svg>
        </span>
        '1/1/2000' must be greater than 1/1/2015
      </li>
    </ul>
  </div>
</section>
`;

exports[`component::DateFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Date CFPB Received the complaint
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Date CFPB Received the complaint filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p />
  <div>
    <ul
      className="date-inputs"
    >
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-from"
        >
          From
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-from"
            max={2015-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value=""
          />
        </div>
      </li>
      <li>
        <label
          className="a-label a-label__heading body-copy"
          htmlFor="date_received-through"
        >
          Through
        </label>
        <div
          className="m-btn-inside-input"
        >
          <input
            className="a-text-input"
            id="date_received-through"
            max={2015-12-31T12:00:00.000Z}
            min={2015-01-01T12:00:00.000Z}
            onChange={[Function]}
            placeholder="mm/dd/yyyy"
            size="15"
            value=""
          />
        </div>
      </li>
    </ul>
  </div>
</section>
`;
